# graphics-raytrace

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: literal.h
src/: Application.cpp  Application.h  Screen.cpp  Screen.h  global.cpp  global.h  main.cpp
src/gl/: main.h  program.cpp  program.h  shader.cpp  shader.h
var/: fragment.glsl  raytrace.glsl  vertex.glsl
var/present/: fragment.glsl
var/raytrace/: clear.glsl  light.glsl  screen.glsl
var/raytrace/shape/: sphere.glsl  triangle.glsl
